[package]
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
name = "rust_roguelike_tutorial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
rltk = { version = "0.8.7", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"

[workspace.lints.rust]
deprecated = "allow"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"

[workspace]
members = ["latest-chapter"]

[profile.dev]
opt-level = 1
