[package]
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
name = "chapter-53-woods"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
lazy_static.workspace = true
regex.workspace = true
rltk.workspace = true
serde.workspace = true
serde_json.workspace = true
specs.workspace = true
specs-derive.workspace = true
