[package]
edition = "2021"
name = "chapter-75-darkplaza"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
rltk.workspace = true
serde.workspace = true
serde_json.workspace = true
specs.workspace = true
specs-derive.workspace = true
